# Model-Stacking-Demo

./: .gitignore  BENCHMARK_RESULTS.md  README.md  pyproject.toml
data/: .gitkeep
outputs/: .gitkeep
outputs/ablation/: ablation_report.txt  ablation_results.json
outputs/load_test/: load_test_report.txt  load_test_results.json
scripts/: analyze_bottlenecks.py  create_mar.py  create_synthetic_dataset.py  download_datasets.py  generate_checkpoints.py  run_ablation.py  run_benchmark.py  run_full_benchmark.py  run_load_test.py
src/: __init__.py
src/benchmark/: __init__.py  locustfile.py  metrics.py  reference.py
src/datasets/: __init__.py  download.py  loader.py
src/models/: __init__.py  base.py  baseline.py  invalid.py  optimized.py
src/models/optimizations/: __init__.py  base.py  batching.py  compile.py  grouped_layers.py  precision.py  super_model.py  vmap_backbone.py
src/server/: __init__.py  app.py
src/torchserve/: __init__.py  config.properties  embedded.py  handler.py  model-config.yaml  server.py
tests/: __init__.py  conftest.py  test_grouped_layers.py  test_super_model.py  test_torchserve.py
tests/e2e/: __init__.py  test_benchmark_flow.py
tests/integration/: __init__.py  test_reference_gen.py  test_server_endpoints.py
tests/unit/: __init__.py  test_benchmark_metrics.py  test_datasets_download.py  test_datasets_loader.py  test_models_base.py  test_models_baseline.py  test_models_invalid.py
